k8s/my-cluster/ingress-service.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
    name: ingress-test-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/affinity: "cookie"
        nginx.ingress.kubernetes.io/affinity-mode: "persistent"
        nginx.ingress.kubernetes.io/session-cookie-name: "route"
        nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
        nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    
spec:
    rules:
        - http:
            paths:
                - path: /api/?(.*)
                  backend:
                    serviceName: api-test-service
                    servicePort: 5050
                - path: /
                  backend:
                    serviceName: frontend-service
                    servicePort: 8080
